# semantic_simulator

./: CMakeLists.txt  README.md  creator.cc  lidar_node.cc  multi_object_world_1.sdf  off2dae.py  segment.sdf  sensor_launch.ign  sequence_creator.py
labelling_node/: listener.py
launch/: multi_object.launch  segmentation.launch
meshes/chimneys/: chimney_20.STL
meshes/stairs/: stairs_0007.dae
rviz/: gpu_lidar_bridge.rviz
tanks/: tank_20.STL
worlds/: multi_object_world_1.sdf  segment.sdf
